Crash when loading .blend file saved after using Grease Pencil ellipse tool #61334

Closed
opened 2019-02-08 19:03:40 +01:00 by Lukas W · 9 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: GeForce MX150

Blender Version
Broken: Blender 2.8, commit 9a63fa21eb

While editing a 2D animation with grease pencil, I switched to the ellipse tool in draw mode. I then drew an ellipse and tried to switch back to the pencil tool. This didn't work and the interface was unresponsive. When I tried to close Blender it offered to save the file, which I did. When I try to open the file now, blender crashes immediately. It is sometimes possible to avoid the crash for a while, but it will always happen as soon as you try editing the seemingly corrupt GP object.

Load the provided .blend file, switch to draw mode for object "Stroke" and try to use any tool. Experience a crash. Also sometimes the drawing is only visible as long as you drag the timebar.

crash.blend
crash.crash.txt

**System Information** Operating system: Ubuntu 18.04 Graphics card: GeForce MX150 **Blender Version** Broken: Blender 2.8, commit 9a63fa21eb4 While editing a 2D animation with grease pencil, I switched to the ellipse tool in draw mode. I then drew an ellipse and tried to switch back to the pencil tool. This didn't work and the interface was unresponsive. When I tried to close Blender it offered to save the file, which I did. When I try to open the file now, blender crashes immediately. It is sometimes possible to avoid the crash for a while, but it will always happen as soon as you try editing the seemingly corrupt GP object. Load the provided .blend file, switch to draw mode for object "Stroke" and try to use any tool. Experience a crash. Also sometimes the drawing is only visible as long as you drag the timebar. [crash.blend](https://archive.blender.org/developer/F6551012/crash.blend) [crash.crash.txt](https://archive.blender.org/developer/F6551016/crash.crash.txt)
Author

Added subscriber: @geloescht

Added subscriber: @geloescht

Added subscribers: @CharlieJolly, @antoniov

Added subscribers: @CharlieJolly, @antoniov

I can see the crash opening your file, but it looks the file gets corrupted for any reason.

I cannot reproduce the first part of the error. If you try to draw an ellipse, first you need to draw the shape, and then confirm or cancel. While you are in this stage you cannot use the menus or any other interface element.

Can you reproduce the same error with other files?

@CharlieJolly Can you reproduce the bug (not the crash opening)?

I can see the crash opening your file, but it looks the file gets corrupted for any reason. I cannot reproduce the first part of the error. If you try to draw an ellipse, first you need to draw the shape, and then confirm or cancel. While you are in this stage you cannot use the menus or any other interface element. Can you reproduce the same error with other files? @CharlieJolly Can you reproduce the bug (not the crash opening)?

I have done a change, and now the open file crash has gone (b85d5dd9b1).

We need to verify how is it possible produce the corrupted file and verify if this was a corner case.

I have done a change, and now the open file crash has gone (b85d5dd9b1a0). We need to verify how is it possible produce the corrupted file and verify if this was a corner case.
Author

Nice, thanks for the swift fix! I will test this as soon as I can get a build that includes the fix.
The corrupt file was produced by saving while Blender was in the state of waiting for the confirmation or cancellation of the drawing of the ellipse. I mistook this state for a hang, because I had never worked with the tool before and chose it by mistake.
So in order to reproduce, first you need to save a new file (the 2D animation preset works fine). Try to choose the ellipse tool, draw an ellipse, possibly change it a few times, then try to choose the pencil tool again (nothing happens) and then directly try to close the Blender window. The popup offering to save the file should appear and you need to confirm. It doesn't work if you have not saved the file before because the file chooser will be unresponsive in that state.
What in my opinion should happen is that the drawing of the ellipse should be automatically confirmed when you try switching tools. That's what most other drawing programs do that allow you to draw temporarily adjustable shapes. As a user I don't like to be locked into some state and I can always undo changes I don't like.

Nice, thanks for the swift fix! I will test this as soon as I can get a build that includes the fix. The corrupt file was produced by saving while Blender was in the state of waiting for the confirmation or cancellation of the drawing of the ellipse. I mistook this state for a hang, because I had never worked with the tool before and chose it by mistake. So in order to reproduce, first you need to save a new file (the 2D animation preset works fine). Try to choose the ellipse tool, draw an ellipse, possibly change it a few times, then try to choose the pencil tool again (nothing happens) and then directly try to close the Blender window. The popup offering to save the file should appear and you need to confirm. It doesn't work if you have not saved the file before because the file chooser will be unresponsive in that state.\ What in my opinion should happen is that the drawing of the ellipse should be automatically confirmed when you try switching tools. That's what most other drawing programs do that allow you to draw temporarily adjustable shapes. As a user I don't like to be locked into some state and I can always undo changes I don't like.
Author

I can confirm that the current version (69f50e6ea9) no longer crashes. I have produced a file in that newer version using the process described in my previous comment. It also results in a crash when opened in a version before the fix, so I assume that file is equally corrupted.

I can confirm that the current version (69f50e6ea98) no longer crashes. I have produced a file in that newer version using the process described in my previous comment. It also results in a crash when opened in a version before the fix, so I assume that file is equally corrupted.

If you can open the file with the fix, the corruption is fixed (the read process review the error and fix it automatically). THe reason of the corruption is more related to modal operators.

If you can open the file with the fix, the corruption is fixed (the read process review the error and fix it automatically). THe reason of the corruption is more related to modal operators.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Antonio Vazquez self-assigned this 2019-02-11 16:44:46 +01:00

I think we can close this report because the crash is fixed. If we need work on modal operators, we can reopen it or create a new task.

I think we can close this report because the crash is fixed. If we need work on modal operators, we can reopen it or create a new task.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61334
No description provided.