GP: Init stroke buffer always

Related to T61334

This initialization avoid any crash when user saves the file while he is drawing a stroke session.